semantico de repeticion